--- a/app/races.component.html
+++ b/app/races.component.html
@@ -1,4 +1,9 @@
-<main class="container" role="main">
+<div class="container" role="main">
+
+  <header class="container">
+    <h1>{{heading}}</h1>
+  </header>
+
 <h2>Money for racing: <input type="text" class="cash" [(ngModel)]="cash"></h2>
 <h2>Cash left to enter races: <span>{{cashLeft() | currency:'USD':true}}</span> </h2>
 <ul>
@@ -33,4 +38,4 @@
   <h3>Total cost:</h3>
   <p>{{totalCost() | currency:'USD':true}}</p>
 </div>
-</main>
+</div>
